--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <a href="../index.html">
-                    <img src="../assets/img/zulubirdlogo.png"/>
+                    <img src="../assets/img/f1logo.png"/>
                 </a>
                 <span></span>
                 <ul>
@@ -24,6 +24,12 @@
         <main>
             <h1 style="text-align:center;">Contact Page</h1>
         </main>
-        
+        <footer class="foot" style="margin-top: 550px;">
+            <a href="#" class="ho">FAQ</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookies</a>
+            <p>2025&copy; All Rights Reserved</p>
+        </footer>
     </body>
 </html>
