--- a/pages/services.html
+++ b/pages/services.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <a href="../index.html">
-                    <img src="../assets/img/zulubirdlogo.png"/>
+                    <img src="../assets/img/f1logo.png"/>
                 </a>
                 <span></span>
                 <ul>
@@ -22,8 +22,27 @@
             </nav>
         </header>
         <main>
-            <h1 style="text-align:center;">Services Page</h1>
+            <section class="left">
+                <h1 style="text-align:center;">Services Page</h1>
+            </section>
+            <section class="right">
+                <nav class="side-nav" aria-label="Side navigation">
+                    <ul>
+                        <li><a href="#">Web Development</a></li>
+                        <li><a href="#">Mobile Apps</a></li>
+                        <li><a href="#">UI/UX Design</a></li>
+                        <li><a href="#">Consulting</a></li>
+                    </ul>
+                </nav>
+                <h2 style="text-align:center;">Service Categories</h2>
+            </section>
         </main>
-        
+         <footer class="foot">
+            <a href="#">FAQ</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookies</a>
+            <p>2025&copy; All Rights Reserved</p>
+        </footer>
     </body>
 </html>
