--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <a href="./index.html">
-                    <img src="./assets/img/zulubirdlogo.png"/>
+                    <img src="./assets/img/f1logo.png"/>
                 </a>
                 <span></span>
                 <ul>
