--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav aria-label="Page navigation">
                 <a href="#">
-                    <img src="./assets/img/zulubirdlogo.png"/>
+                    <img src="./assets/img/f1logo.png"/>
                 </a>
                 <span></span>
                 <ul>
@@ -22,8 +22,20 @@
             </nav>
         </header>
         <main>
+            <section class="left">
             <h1 style="text-align:center;">Home Page</h1>
+            </section>
+            <section class="right">
+                <h2>News</h2>
+            </section>
         </main>
+        <footer class="foot">
+            <a href="#" class="ho">FAQ</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookies</a>
+            <p>2025&copy; All Rights Reserved</p>
+        </footer>
         
     </body>
 </html>
